[tool.poetry]
name = "hexecutable"
version = "0.1.0"
description = ""
authors = ["Kevin Dienst <axi0m@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.17"
mkdocs-rss-plugin = "^1.12.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-git-authors-plugin = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
